[package]
name = "rusty_nes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitflags = "2.5.0"
ggez = "0.9.3"
palette = "0.7.5"
serde = "1.0.204"

[profile.dev]
overflow-checks = false
